fix: fix cadc download manager tests